FFT Working, about to try window sliding

--- a/AMT/AMT.vcxproj
+++ b/AMT/AMT.vcxproj
@@ -89,7 +89,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Amt.cpp" />
-    <ClCompile Include="AmtRenderer.cpp" />
+    <ClCompile Include="NoteRenderer.cpp" />
     <ClCompile Include="Note.cpp" />
     <ClCompile Include="Notes.cpp" />
     <ClCompile Include="NotesGenome.cpp" />
@@ -112,7 +112,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\AmtRenderer.h" />
+    <ClInclude Include="include\NoteRenderer.h" />
     <ClInclude Include="include\NoteStruct.h" />
     <ClInclude Include="include\Notes.h" />
     <ClInclude Include="include\NotesGenome.h" />
