--- a/trunk/AMT/AMT.vcxproj.filters
+++ b/trunk/AMT/AMT.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClCompile Include="MusicEvaluator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AmtUtils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\NotesGenome.h">
@@ -53,6 +56,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\MusicEvaluator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\AmtUtils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
